fix: attached coach to club after creating or update